c4prj2_input/grade.txt
Grading at Wed Jan 27 15:44:06 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:12:1: error: control reaches end of non-void function [-Werror=return-type]
 deck_t * hand_from_string(const char * str, future_cards_t * fc){ }
 ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
